tests/files/flow_controller_tests/should_run/088.cmdr
x = 3.3;
print sech(x);