tests/files/flow_controller_tests/should_fail/072.cmdr
x = false;
print sech(x);